--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^5.4.0",
+    "babel-plugin-react-transform": "^2.0.0",
     "css-loader": "^0.23.1",
     "html-webpack-plugin": "^1.7.0",
+    "react-transform-hmr": "^1.0.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
