--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "alt": "^0.18.1",
+    "alt-utils": "^1.0.0",
     "node-uuid": "^1.4.7",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
